Google site verification meta tag

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -14,6 +14,7 @@
             <meta name="dc.date.created" content="{{ ctx.pub_date.date().isoformat() }}">
             <meta name="dc.date.issued" content="{{ ctx.pub_date.date().isoformat() }}">
         {% endif %}
+        <meta name="google-site-verification" content="uJWWR6d5ESb8torD0v97T_07HLMGX7VzQ-smcUTc_IQ" />
 
         <!-- newsfeed -->
         <link href="/feed.atom" rel="alternate" title="Feed" type="application/atom+xml">
