--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -15,6 +15,9 @@
         {% endif %}
         <meta name="google-site-verification" content="uJWWR6d5ESb8torD0v97T_07HLMGX7VzQ-smcUTc_IQ" />
 
+        <!-- favicon -->
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
         <!-- newsfeed -->
         <link href="/feed.atom" rel="alternate" title="Feed" type="application/atom+xml">
 
