--- a/_templates/rst_display.html
+++ b/_templates/rst_display.html
@@ -12,7 +12,7 @@
 
   {{ rst.fragment }}
 
-  <a href="https://flattr.com/submit/auto?user_id=danilo&url=http://blog.dbrgn.ch{{ link_to('page', slug=ctx.slug) }}/&title={{ rst.title }}&description={{ ctx.summary }}&tags={{ ctx.tags|sort(case_sensitive=true)|join(", ") }}">
+  <a href="https://flattr.com/submit/auto?user_id=danilo&url=http://blog.dbrgn.ch{{ link_to('page', slug=ctx.slug) }}/&title={{ rst.title|urlencode }}&description={{ ctx.summary|urlencode }}&tags={{ ctx.tags|sort(case_sensitive=true)|join(", ")|urlencode }}">
        <img src="/static/img/flattr-badge-large.png" alt="Flattr this!" /> 
   </a>
 
