--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -40,7 +40,7 @@
 
             <div class="clearboth"></div>
 
-            <div id="content">
+            <div id="content" class="hyphenate">
                 {% block body %}{% endblock %}
             </div>
         </div>
@@ -54,6 +54,10 @@
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
           })();
+        </script>
+        <script type="text/javascript" src="/static/hyphenator.js"></script>
+        <script type="text/javascript">
+            Hyphenator.run();
         </script>
 
     </body>
