Changed google font URL to https

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -22,7 +22,7 @@
         <link href="/feed.atom" rel="alternate" title="Feed" type="application/atom+xml">
 
         <!-- assets -->
-        <link href="http://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="/static/style.css" type="text/css">
         {%- for link in links %}
             <link rel="{{ link.rel }}" href="{{ link.href }}"{% if link.media %} media="{{ link.media }}"{% endif %} type="{{ link.type }}">
