--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -5,7 +5,7 @@
 
         <!-- meta -->
         <meta name="author" content="Danilo Bargen">
-        <meta name="dc.language" content="de-CH">
+        <meta name="dc.language" content="en-US">
         <meta name="dc.license" content="http://creativecommons.org/licenses/by-sa/3.0/">
         {% if ctx and ctx.summary %}<meta name="description" content="{{ ctx.summary }}">{% endif %}
         {% if ctx and ctx.tags %}<meta name="keywords" content="{{ ctx.tags|sort(case_sensitive=true)|join(', ') }}">{% endif %}
