Don't hyphenate tt elements

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -57,6 +57,9 @@
         </script>
         <script type="text/javascript" src="/static/hyphenator.js"></script>
         <script type="text/javascript">
+            Hyphenator.config({
+                donthyphenateclassname : 'docutils literal'
+            });
             Hyphenator.run();
         </script>
 
