Linked blog title

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         <div id="wrapper">
-            <div id="blogtitle">blog.dbrgn.ch</div>
+            <div id="blogtitle"><a href="/">blog.dbrgn.ch</a></div>
             <ul id="mainnav">
                 <li><a href="/">home</a></li>
                 <li><a href="/archive/">archive</a></li>
