--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -35,7 +35,8 @@
                 <li><a href="/">home</a></li>
                 <li><a href="/archive/">archive</a></li>
                 <li><a href="/tags/">tags</a></li>
-                <li class="last"><a href="/about/">about</a></li>
+                <li><a href="/blog/">about this blog</a></li>
+                <li class="last"><a href="/about/">about me</a></li>
             </ul>
 
             <div class="clearboth"></div>
